# duplicati_monitor

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENCE.md  README.md  docker-compose.yml
.github/workflows/: create-image.yml
src/: main.rs
