[package]
name = "duplicati_monitor"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
reqwest = { version = "0.12.11", features = ["json", "native-tls-vendored"] }
colored = "2.2.0"
#dotenv = "0.15"
